Suggestions from dbeaver#38906
Fully modified.